# vibe-hub

./: .gitignore  AGENTS.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  redeploy.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  TODO.md  entrypoint.sh  pyproject.toml
backend/app/: database.py  main.py  models.py  utils.py
backend/app/agent/: agent.py  deps.py  tools.py
backend/app/core/: config.py  logfire_config.py  security.py
backend/app/routers/: apps.py  auth.py  collections.py  comments.py  dreams.py  follows.py  implementations.py  likes.py  media.py  notifications.py  og.py  ownership.py  reviews.py  tags.py  tools.py  users.py  vibes.py
backend/app/schemas/: schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0807671417a0_change_extra_specs_to_jsonb.py  0922b5a93c22_initial_dreamware_schema.py  22e5cc781c14_initial_schema_with_apps.py  3169e8bfb108_add_dead_app_reports.py  341c1afd4393_add_comment_nesting_and_votes.py  4a8b2c9d3e0f_add_app_url_index.py  856621699de9_add_dream_ownership.py  8f6f1cff722a_add_dreamware_v2_fields.py  a74acab37d14_initial_migration_after_postgres_setup.py  f920d2c1e981_add_is_admin_to_users.py
backend/scripts/: ingest_reddit_posts.py  ingest_reddit_prod.sh  seed_db.py  verify_slugs.py
backend/tests/: conftest.py  test_admin_role.py  test_agent.py  test_api_keys.py  test_app_counts.py  test_app_edit_delete.py  test_app_media_delete.py  test_auth.py  test_core_flow.py  test_coverage_gap.py  test_dream_counts.py  test_dream_edit_delete.py  test_dreamware_v2.py  test_is_liked_field.py  test_likes.py  test_media.py  test_notifications_flow.py  test_og.py  test_ownership.py  test_profile_likes.py  test_reputation.py  test_search.py  test_showapp_v2.py  test_social_auth.py  test_social_graph.py  test_sorting.py  test_status_feature.py  test_tags_tools_admin.py  test_users.py
docs/: prd.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx
frontend/src/components/apps/: index.ts  (+10 more)
frontend/src/contexts/: AppCacheContext.tsx  AuthContext.tsx  DreamCacheContext.tsx
frontend/src/lib/: analytics.ts  api.ts  types.ts
frontend/src/pages/: AdminPortal.tsx  AgentInstructions.tsx  CreateApp.tsx  CreateDream.tsx  EditApp.tsx  EditDream.tsx  Home.tsx  Login.tsx  OAuthCallback.tsx  Profile.tsx  UserPage.tsx  ViewApp.tsx  ViewDream.tsx
frontend/src/styles/: globals.css
nginx/: nginx.conf
submit_app_agent/: CLAUDE.md  pyproject.toml
submit_app_agent/.claude/: settings.local.json
submit_app_agent/src/showapp/: __init__.py  __main__.py  config.py  server.py  tools.py
submit_app_agent/tests/: __init__.py  test_server.py  test_tools.py
(+29 files in other folders)
