[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt<4.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.127.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn>=0.40.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "boto3>=1.34.0",
    "moto[s3]>=5.0.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "pydantic-ai>=0.0.49",
    "openai>=1.0.0",
    "playwright>=1.49.0",
    "logfire>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
