[project]
name = "showapp-agent"
version = "0.1.0"
description = "MCP tools for Claude Code agent to interact with Show Your App API"
readme = "CLAUDE.md"
requires-python = ">=3.13"
dependencies = [
    "claude-code-sdk>=0.0.20",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[project.scripts]
showapp-agent = "showapp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/showapp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
